--- a/首頁.md
+++ b/首頁.md
@@ -5,8 +5,11 @@
 
 # python:函式庫:
 
-> - ## [OPENCV_電腦視覺庫:](https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/opencv/)[![](https://i.imgur.com/inHm6X1.png)](https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/opencv/)
+## [OPENCV_電腦視覺庫:](https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/opencv/)[![](https://i.imgur.com/inHm6X1.png)](https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/opencv/)
+## [pytube_youtube影片下載用:](https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/pytube/)[![](https://i.imgur.com/P6fDeZi.png)](https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/pytube/)
+## [qrcode函式庫:](https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/qrcode/)[無圖標](https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/qrcode/)
+## [flask函式庫:](https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/flask/)
+[![](https://i.imgur.com/oTdn2Ls.png)](https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/flask/)
 
-> - ## [pytube_youtube影片下載用:](https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/pytube/)[![](https://i.imgur.com/P6fDeZi.png)](https://k0976670xxx.github.io/my_notes/%E7%AD%86%E8%A8%98/python/python%E5%87%BD%E5%BC%8F%E5%BA%AB/pytube/)
 
 # 待補充
